update jvm params