@@ -1,10 +1,10 @@
 -Xms512m
 -Xmx512m
--XX:+UseParNewGC
--XX:+UseConcMarkSweepGC
+-XX:+UseG1GC
+-XX:G1HeapRegionSize=32M
+-XX:+UseGCOverheadLimit
+-XX:+ExplicitGCInvokesConcurrent
 -XX:+PrintGC
--XX:CMSInitiatingOccupancyFraction=50
--XX:CMSMaxAbortablePrecleanTime=500
 -XX:+PrintGCDateStamps
 -XX:+PrintGCDetails
 -XX:+PrintGCTimeStamps
